--- a/src/App.css
+++ b/src/App.css
@@ -12,9 +12,14 @@ body {
  
  
 .button {
-    font-size: 1.5em;
+    font-size: 1.8em;
     border-radius: .5em;
     color: white;
     background-color: rgb(83, 78, 78);
     cursor: pointer;
+}
+
+.colors-array {
+    font-size: 2.4em;
+
 }
