--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,9 @@ body {
     font-size: 2.4em;
 
 }
+
+.messages-array {
+    font-size: 2em;
+    color: white;
+    background-color: rgb(140, 68, 68);
+}
